2008-12-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thbrk/brk-maximal.c (brk_maxmimal_do):
	Call trie_state_is_single() instead of trie_state_is_leaf() when a
	state is known to be terminal, eliminating redundant check.
	(Requires libdatrie >= 0.1.99.2+cvs20081228)

2008-12-27  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thbrk/brk-maximal.c
	(brk_shot_init, brk_shot_reuse, best_brk_contest):
	Use memcpy() to copy arrays, rather than iteration via array index.
	Yet another minor performance improvement.

	* src/thbrk/brk-maximal.c (brk_shot_reuse):
	Re-allocate 'brk_pos' array only when growing, and never bother
	shrinking it.

2008-12-26  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Reuse break pool nodes more deeply, improving performance a little bit.
	(Requires libdatrie >= 0.1.99.2+cvs20081226)

	* src/thbrk/brk-maximal.c
	(brk_shot_copy -> brk_shot_init, +brk_shot_reuse):
	Split brk_shot_copy() into brk_shot_init() and brk_shot_reuse().
	The former is for newly created nodes, while the latter is for
	reusing old nodes, with memory reallocation minimized.
	* src/thbrk/brk-maximal.c (brk_pool_node_new):
	Separately call brk_shot_init() and brk_shot_reuse() per case.
	* src/thbrk/brk-maximal.c (brk_pool_free):
	Do not destruct BrkShot member. Keep it for further reuses.
	* src/thbrk/brk-maximal.c (brk_pool_allocator_clear):
	..And actually destruct it here.

	* src/thbrk/brk-maximal.c (brk_root_pool):
	Save one malloc() call for temporary 'root_shot'.

2008-12-26  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thbrk/brk-maximal.c (brk_pool_get_node, brk_maximal_do):
	Get rid of unused arg 's' for brk_pool_get_node().

2008-12-26  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-ict.txt: Add words.

2008-12-23  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Add housekeeping routine to clean up dictionary.

	* src/Makefile.am, src/dummy.c -> libthai.c, src/libthai.def: